--- a/index.html
+++ b/index.html
@@ -15,3 +15,25 @@
 
 </body>
 </html>
+
+<script>
+  window.onload = function() {
+    const params = new URLSearchParams(window.location.search);
+    if (params.get('data')) {
+      console.log("GET방식 데이터");
+    } else {
+      document.body.addEventListener("submit", e => {
+        e.preventDefault();
+      });
+    }
+
+    const formData = new FormData(document.forms[0] || {});
+    const jsonData = formData.get('data');
+    if (jsonData) {
+      const data = JSON.parse(jsonData);
+      drawTable(data);
+    } else {
+      document.getElementById('tableArea').innerHTML = '데이터 없음';
+    }
+  };
+</script>
